[gd_scene load_steps=8 format=3 uid="uid://bbpg1nmv3p2gw"]

[ext_resource type="Script" path="res://MainProject/Scenes/menu/menu.gd" id="1_og17y"]
[ext_resource type="FontFile" uid="uid://b4u33kyj8kn1h" path="res://MainProject/Sprites/brackeys_platformer_assets/fonts/PixelOperator8-Bold.ttf" id="1_tp6iq"]
[ext_resource type="PackedScene" uid="uid://c3xqaietfgs7l" path="res://MainProject/Game.tscn" id="2_2qwqh"]
[ext_resource type="VideoStream" path="res://MainProject/Resources/209775_small.ogv" id="3_ylyuh"]
[ext_resource type="Texture2D" uid="uid://bc8aajbean33x" path="res://MainProject/Sprites/backgrounds/screens/menu.png" id="4_uqvc4"]
[ext_resource type="Shader" path="res://MainProject/vignette.gdshader" id="5_d6jlp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_in4ny"]
shader = ExtResource("5_d6jlp")
shader_parameter/inner_radius = 0.1
shader_parameter/outer_radius = 1.0
shader_parameter/vignette_strength = 1.0
shader_parameter/dither_strength = 0.03
shader_parameter/vignette_color = null

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_og17y")
load_scene = ExtResource("2_2qwqh")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
visible = false
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1082.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.442, 0.442)
stream = ExtResource("3_ylyuh")
autoplay = true
loop = true

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -396.0
offset_right = 48.0
offset_bottom = 404.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.947, 0.947)
texture = ExtResource("4_uqvc4")
expand_mode = 3

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_in4ny")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 42.0
offset_top = -140.0
offset_right = 174.0
offset_bottom = -32.0
grow_vertical = 0
theme_override_constants/separation = 8

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_color = Color(0.439216, 0.619608, 1, 1)
theme_override_colors/font_pressed_color = Color(0.898039, 0.85098, 0.45098, 1)
theme_override_fonts/font = ExtResource("1_tp6iq")
text = "Continue"
alignment = 0

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_color = Color(0.439216, 0.619608, 1, 1)
theme_override_colors/font_pressed_color = Color(0.898039, 0.85098, 0.45098, 1)
theme_override_fonts/font = ExtResource("1_tp6iq")
text = "New Game"
alignment = 0

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_color = Color(0.439216, 0.619608, 1, 1)
theme_override_colors/font_pressed_color = Color(0.898039, 0.85098, 0.45098, 1)
theme_override_fonts/font = ExtResource("1_tp6iq")
text = "Settings"
alignment = 0

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_color = Color(0.439216, 0.619608, 1, 1)
theme_override_colors/font_pressed_color = Color(0.898039, 0.85098, 0.45098, 1)
theme_override_fonts/font = ExtResource("1_tp6iq")
text = "Exit"
alignment = 0

[node name="Logo" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -542.0
offset_top = 60.0
offset_right = -38.0
offset_bottom = 100.0
grow_horizontal = 0

[node name="Label" type="Label" parent="Logo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tp6iq")
theme_override_font_sizes/font_size = 32
text = "Luna's Adventure"

[node name="LoadingScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.0666667, 0.0666667, 1)

[node name="Loading" type="Label" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_tp6iq")
theme_override_font_sizes/font_size = 32
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
